package org.coursera.lab.strategy;

public class SafetyHandling implements Handling {
    @Override
    public String handle() {
        return "eases through turn";
    }
}
